# flash-sdk-rust

./: Anchor.toml
programs/flash-compute/: Cargo.toml
programs/flash-compute/src/: lib.rs
programs/flash-read/: Cargo.toml
programs/flash-read/src/: error.rs  lib.rs  math.rs  states.rs
