[package]
name = "flash-compute"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_compute"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "event-cpi"]}
solana-program = "=1.18.17"
anchor-spl = "0.30.1"
pyth-sdk-solana = "0.10.1"
pyth-solana-receiver-sdk = "0.3.1"
flash-read = { path = "../flash-read", features = ["cpi"]}

