[package]
name = "flash-read"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_read"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed", "event-cpi"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
solana-program = "2.2.1"
anchor-spl = "0.31.0"
pyth-solana-receiver-sdk = "1.1.0"
num-traits = "0.2.15"
borsh = { version = "0.10.3", default-features = false }
borsh1 = { package = "borsh", version = "1.5.7", default-features = false }
